# TileDB

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/scripts/: aws.tar.gpg  az.tar.gpg  azurite.tar.gpg  install_aws.sh  install_aws_cli.sh  install_azurite.sh  install_catch2.sh  install_hadoop.sh  install_minio.sh  install_openssl1.1.sh  install_supported_codec.sh  mkcert.sh  notes  r.tar.gpg  run_dfs_tests.sh
.github/workflows/: basic.yml  valgrind.yml
.travis/: r.tar.enc
.travis/scripts/: install_hadoop.sh  install_openjpeg.sh  install_supported_codec.sh  run_dfs_tests.sh
cmake/Modules/: FindBLOSC.cmake  FindCURL.cmake  FindGCSClient.cmake  FindHDFS.cmake  FindJPEG2K.cmake  FindLZ4.cmake  FindS3Client.cmake  Findlibuuid.cmake  MuParserX.cmake  SetCatch2Version.cmake
cmake/patches/: awssdk-build.patch  dl_utils.cc  dl_utils.h  tdb_openssl_shim.cc
core/: CMakeLists.txt  EnvironmentVariables.md
core/include/array/: array.h  array_iterator.h  array_schema.h  array_schema_c.h
core/include/c_api/: tiledb.h  tiledb_constants.h  tiledb_storage.h  tiledb_utils.h
core/include/codec/: blosc_prototypes.h  codec.h  codec_blosc.h  codec_filter.h  codec_filter_bit_shuffle.h  codec_filter_delta_encode.h  codec_gzip.h  codec_jpeg2K.h  codec_jpeg2K_RGB.h  codec_lz4.h  codec_rle.h  codec_zstd.h
core/include/expressions/: expression.h
core/include/fragment/: book_keeping.h  buffer.h  fragment.h  read_state.h  write_state.h
core/include/metadata/: metadata_schema_c.h
core/include/misc/: dl_utils.h  error.h  mem_utils.h  openssl_shim.h  tdb_openssl_shim.h  tiledb_openssl_shim.h  uri.h  utils.h
core/include/storage/: storage_fs.h  storage_gcs.h  storage_hdfs.h  storage_manager.h  storage_posixfs.h
core/include/storage_manager/: storage_azure_blob.h  storage_buffer.h  storage_fs.h  storage_gcs.h  storage_hdfs.h  storage_manager.h  storage_manager_config.h  storage_posixfs.h  storage_s3.h
core/src/array/: array.cc  array_iterator.cc  array_read_state.cc  array_schema.cc  array_sorted_read_state.cc  array_sorted_write_state.cc
core/src/c_api/: tiledb.cc  tiledb_utils.cc
core/src/codec/: codec.cc  codec_blosc.cc  codec_filter.cc  codec_filter_bit_shuffle.cc  codec_filter_delta_encode.cc  codec_gzip.cc  codec_jpeg2K.cc  codec_jpeg2K_RGB.cc  codec_lz4.cc  codec_rle.cc  codec_zstd.cc
core/src/expressions/: expression.cc
core/src/fragment/: book_keeping.cc  buffer.cc  fragment.cc  read_state.cc  write_state.cc
core/src/metadata/: metadata.cc
core/src/misc/: dl_utils.cc  error.cc  hilbert_curve.cc  mem_utils.cc  openssl_shim.cc  tdb_openssl_shim.cc  uri.cc  url.cc  utils.cc
core/src/storage/: storage_azure_blob.cc  storage_buffer.cc  storage_fs.cc  storage_gcs.cc  storage_hdfs.cc  storage_manager.cc  storage_manager_config.cc  storage_posixfs.cc  storage_s3.cc
core/src/storage_manager/: 1  storage_azure_blob.cc  storage_buffer.cc  storage_fs.cc  storage_gcs.cc  storage_hdfs.cc  storage_manager.cc  storage_manager_config.cc  storage_posixfs.cc  storage_s3.cc
doc/: mainpage.dox
examples/: CMakeLists.txt  expected_results  expected_results_parallel  run_examples.sh  run_examples_base.sh  run_examples_parallel.sh  tiledb.supp
examples/src/: examples.h  tiledb_array_3d.cc  tiledb_array_create_dense.cc  tiledb_array_create_sparse.cc  tiledb_array_primitive.cc  (+44 more)
test/: CMakeLists.txt
test/include/benchmark/: tiledb_benchmark.h
test/include/c_api/: c_api_array_schema_spec.h  c_api_dense_array_spec.h  c_api_sparse_array_spec.h
test/include/catch2/: catch.h
test/inputs/: benchmark.config  valgrind.supp
test/inputs/compatibility_gdb_pre100_ws/t0_1_2/: __array_schema.tdb
test/inputs/compatibility_pre2_ws/my_workspace/dense_arrays/my_array_A/: __array_schema.tdb
test/inputs/compatibility_pre2_ws/my_workspace/dense_arrays/my_array_A/__4006A3C2-AA4A-47D5-A836-18A2F8C0F17E4555318720_1586969354458/: a1.tdb  a2.tdb  a2_var.tdb  a3.tdb
test/inputs/compatibility_pre2_ws/my_workspace/sparse_arrays/my_array_B/: __array_schema.tdb
test/inputs/compatibility_pre2_ws/my_workspace/sparse_arrays/my_array_B/__6A0F5AA3-8FF8-4761-86AC-7F59F038C23E4594509248_1586969340972/: __coords.tdb  a1.tdb  a2.tdb  a2_var.tdb  a3.tdb
test/inputs/examples_ws/sparse_arrays/my_array_B/: __array_schema.tdb
test/inputs/examples_ws/sparse_arrays/my_array_B/__4FECD19A-4F7D-4D21-B170-A2D111C8FCC44550772224_1652300381620/: __coords.tdb  a2.tdb
test/inputs/genomicsdb_ws/: callset.json  loader.json  query.json  vcfheader.vcf  vidmap.json
test/inputs/genomicsdb_ws/1$1$249250621/: __array_schema.tdb
test/inputs/genomicsdb_ws/1$1$249250621/__3ACDA3EF-1068-447C-B57F-96E920E75E1A4518356480_1681829219445/: AD.tdb  AD_var.tdb  ALT.tdb  ALT_var.tdb  BaseQRankSum.tdb  ClippingRankSum.tdb  DP.tdb  DP_FORMAT.tdb  DS.tdb  END.tdb  FILTER.tdb  FILTER_var.tdb  GQ.tdb  GT.tdb  GT_var.tdb  HaplotypeScore.tdb  MIN_DP.tdb  MLEAC_var.tdb  MLEAF.tdb  MLEAF_var.tdb  MQ.tdb  MQ0.tdb  MQRankSum.tdb  PGT.tdb  PGT_var.tdb  PID.tdb  PID_var.tdb  PL.tdb  PL_var.tdb  QUAL.tdb  RAW_MQ.tdb  REF.tdb  REF_var.tdb  ReadPosRankSum.tdb  SB.tdb  __coords.tdb
test/inputs/genomicsdb_ws/1$1$249250621/genomicsdb_meta_dir/: genomicsdb_column_bounds.json  genomicsdb_meta_703A9BE7-49B1-4BB0-9F5B-20793E75F2A6.json
test/src/array/: test_array_schema.cc
test/src/benchmark/: test_print_array_schema.cc  test_print_book_keeping.cc  test_reusing_tiledb_context.cc  test_sparse_array_benchmark.cc
test/src/c_api/: c_api_array_schema_spec.cc  c_api_dense_array_spec.cc  c_api_sparse_array_spec.cc  test_array_iterator.cc  test_array_schema_api.cc  test_dense_array_api.cc  test_sparse_array_api.cc  test_tiledb_utils.cc
test/src/codec/: test_codec.cc  test_codec_filter.cc
test/src/expressions/: test_expressions.cc  test_filter_api.cc
test/src/fragment/: test_buffer.cc
test/src/misc/: test_mem_utils.cc  test_uri.cc  test_url.cc  test_utils.cc
test/src/storage_manager/: test_azure_blob_storage.cc  test_gcs_storage.cc  test_posixfs.cc  test_s3_storage.cc  test_storage_buffer.cc
(+10 files in other folders)
